SVN
---

JDO:   Resolved issue CASTOR-2000 using contribution from Ralf Joachim [ralf.joachim@syscon.eu]
       Created basic modul structur for JDO modul including eclipse configuration.
       Details: http://jira.codehaus.org/browse/CASTOR-2000
       (Ralf - 20070607)

JDO:   Resolved issue CASTOR-1774 using contribution from Le Duc Bao [leducbao@gmail.com]
       Replaced PrintStream and StringBuffer by a Writer implementation.
       Details: http://jira.codehaus.org/browse/CASTOR-1774
       (Ralf - 20070607)

XML:   Resolved issue CASTOR-1986 using contribution from Werner Guttmann [michael.kopp@gmx.at]
       Fixed a problem with incorrect import statements/class name references in the context
       of included/imported XML schemas.
       Details: http://jira.codehaus.org/browse/CASTOR-1986
       (Werner - 20070601)

XML:   Resolved issue CASTOR-991 using contribution from Werner Guttmann [michael.kopp@gmx.at]
       Added support for Java 5 enums during unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-991
       (Werner - 20070528)
       
XML:   Resolved issue CASTOR-1221 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for Java 5 enums during marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1221
       (Werner - 20070526)
       
XML:   Resolved issue CASTOR-1985 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Trace statements output only if in trace mode.
       Details: http://jira.codehaus.org/browse/CASTOR-1985
       (Werner - 20070524)
       
XML:   Resolved issue CASTOR-1850 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactored toString() method of XMLException.
       Details: http://jira.codehaus.org/browse/CASTOR-1850
       (Werner - 20070515)
       
XML:   Resolved issue CASTOR-1769 using contribution from Werner Guttmann [werner.guttmann@gmx.net]